devops/react-deployment.yaml
# `frontend` 서버를 쿠버네티스에 배포하기 위한 yaml 파일입니다.
# Deployment와 Service를 한꺼번에 배포합니다.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-k8s-resource-monitor-deployment
  namespace: frontend-system
  labels:
    app: react-k8s-resource-monitor
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-k8s-resource-monitor
  template:
    metadata:
      labels:
        app: react-k8s-resource-monitor
    spec:
      containers:
        - image: shp7724/react-k8s-resource-monitor:latest
          imagePullPolicy: Always
          name: react-k8s-resource-monitor
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: react-k8s-resource-monitor-svc
  namespace: frontend-system
  labels:
    app: react-k8s-resource-monitor
spec:
  type: NodePort
  selector:
    app: react-k8s-resource-monitor
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 31235
